# sentiment_analyzer

./: .gitignore  README.md  ground_truth_human.csv  gt_sample.csv  pyproject.toml  sentiment_analyzer.ipynb
docker/: Dockerfile  docker-compose.yml
src/annotator/: cli.py  tui.py
src/extractor/: chat_extractor.py  cli.py
src/sentiment_analyzer/: __init__.py
